Add system test.js

--- a/public/index.html
+++ b/public/index.html
@@ -7,5 +7,8 @@
   </head>
   <body>
     <h1>Hello</h1>
+    <div class="A0">
+      <!-- Add A0 voltage value here -->
+    </div>
   </body>
 </html>
