--- a/public/index.html
+++ b/public/index.html
@@ -10,5 +10,8 @@
     <div class="A0">
       <!-- Add A0 voltage value here -->
     </div>
+    <script src="./js/jquery-2.2.0.min.js"></script>
+    <script src="./js/socket.io-1.3.7.js"></script>
+    <script src="./js/app.js"></script>
   </body>
 </html>
