--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,13 @@
     <title>Control page</title>
   </head>
   <body>
-    <h1>Hello</h1>
-    <div class="A0">
-      <!-- Add A0 voltage value here -->
+    <h1>Hello!</h1>
+    <div class="dataFrames">
+      <!-- Add data frame  here -->
     </div>
+    <ul class="weather list-group">
+      <!-- weather information -->
+    </ul>
     <script src="./js/jquery-2.2.0.min.js"></script>
     <script src="./js/socket.io-1.3.7.js"></script>
     <script src="./js/app.js"></script>
