--- a/public/index.html
+++ b/public/index.html
@@ -4,15 +4,45 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Control page</title>
+    <link rel="stylesheet" href="./css/bootstrap.min.css" />
+    <link rel="stylesheet" href="./css/stylesheet.css"  />
+    <style>
+    .well {
+      margin-top: 36px;
+    }
+    </style>
   </head>
   <body>
-    <h1>Hello!</h1>
-    <div class="dataFrames">
-      <!-- Add data frame  here -->
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 col-md-offset-3 well">
+          <h1 class="text-center">
+            Sensor value from Drone
+          </h1>
+          <!-- <div class="weather">
+          <!-- weather information ->
+        </div> -->
+        <div class="dataName">
+          <!-- Add data info here -->
+        </div>
+        <div class="AD0">
+          <!-- Add AD0 data here -->
+        </div>
+        <div class="AD1">
+          <!-- Add AD1 data here -->
+        </div>
+        <div class="AD2">
+          <!-- Add AD2 data here -->
+        </div>
+        <div class="AD3">
+          <!-- Add AD3 data here -->
+        </div>
+        <div class="dataFrames">
+          <!-- here -->
+        </div>
+      </div>
     </div>
-    <ul class="weather list-group">
-      <!-- weather information -->
-    </ul>
+  </div>
     <script src="./js/jquery-2.2.0.min.js"></script>
     <script src="./js/socket.io-1.3.7.js"></script>
     <script src="./js/app.js"></script>
