--- a/public/index.html
+++ b/public/index.html
@@ -22,32 +22,32 @@
             Drone's eye
             <i class="fa fa-eye"></i>
           </h1>
-          <!-- <div class="weather">
-          <!-- weather information ->
-        </div> -->
-        <div class="dataName">
-          <!-- Add data info here -->
+          <div class="weather">
+            <!-- weather information -->
+          </div>
+          <div class="dataName">
+            <!-- Add data info here -->
+          </div>
+          <div class="AD0">
+            <!-- Add AD0 data here -->
+          </div>
+          <div class="AD1">
+            <!-- Add AD1 data here -->
+          </div>
+          <div class="AD2">
+            <!-- Add AD2 data here -->
+          </div>
+          <div class="AD3">
+            <!-- Add AD3 data here -->
+          </div>
+          <div class="dataFrames">
+            <!-- here -->
+          </div>
+          <!-- <button type="button" class="btn btn-default">巡回中</button> -->
+          <button type="button" class="btn btn-danger btn-lg btn-block">強制帰還ボタン</button>
         </div>
-        <div class="AD0">
-          <!-- Add AD0 data here -->
-        </div>
-        <div class="AD1">
-          <!-- Add AD1 data here -->
-        </div>
-        <div class="AD2">
-          <!-- Add AD2 data here -->
-        </div>
-        <div class="AD3">
-          <!-- Add AD3 data here -->
-        </div>
-        <div class="dataFrames">
-          <!-- here -->
-        </div>
-        <!-- <button type="button" class="btn btn-default">巡回中</button> -->
-        <button type="button" class="btn btn-danger btn-lg btn-block">強制帰還ボタン</button>
-      </div>
-      <div class="row">
-        <div class="col-md-6 col-md-offset-3 well">
+        <div class="row">
+          <div class="col-md-6 col-md-offset-3 well">
           <h1 class="text-center">Where is drone?</h1>
           <div id="map_canvas" style="width:100%;height:300px;"></div>
         </div>
